@@ -16,6 +16,9 @@ What's changed in loggerhead?
     - Merge the pqm changes back into trunk, after trunk was reverted to an old
       revision. (John Arbash Meinel, #716152)
 
+    - The json module is no longer claimed to be supported as alternative for 
+      simplejson. (Jelmer Vernooij, #586611)
+
 
 1.18 [10Nov2010]
 ----------------
